# dom-parser

./: CMakeLists.txt  README.md  csv_to_plot.py  json2dot.py  perf2dot.py  simple.json  test.json
example/: numbers
include/: RenderObjects.h
include/test/: output.xml  test.hpp
src/: CMakeLists.txt  bench.cpp  layout.cpp  main.cpp  parallel_layout.cpp  test_cols.cpp  test_font.cpp  test_image.cpp  test_nested.cpp  test_parallel_rows.cpp  test_rows.cpp  test_task.cpp  test_textbox.cpp
src/gbench/: GoogleBenchmark.cmake
